<resources>
    <string name="app_name">Linked Listing</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_listings">Listings</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">Profile</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>

    <string name="profile">Profile</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Add Item</string>

    <string name="itemName">Item Name</string>
    <string name="condition">Condition</string>
    <string name="date_listed">Date Listed</string>
    <string name="description">Description</string>
    <string name="price">Price</string>

    <string name="image_preview">Image Preview</string>
    <string name="upload_image">Upload Image</string>

    <string name="minimum_amount">Min. # Of Supply for Alert</string>
    <string name="current_amount">Current # of Supply</string>



</resources>