<?xml version="1.0" encoding="utf-8"?>
<!-- This is used to define the order of the elements on the nav bar. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/ic_inventory_white"
        android:title="@string/title_inventory" />

    <item
        android:id="@+id/navigation_listings"
        android:icon="@drawable/ic_listings_white"
        android:title="@string/title_listings" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_messages_white"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_white"
        android:title="@string/title_profile" />

</menu>