<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_inventory">

    <fragment
        android:id="@+id/navigation_inventory"
        android:name="com.app.linkedlisting.ui.inventory.InventoryFragment"
    android:label="@string/title_inventory"
    tools:layout="@layout/fragment_inventory" />

    <fragment
        android:id="@+id/navigation_listings"
        android:name="com.app.linkedlisting.ui.listings.ListingFragment"
    android:label="@string/title_listings"
    tools:layout="@layout/fragment_listings" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.app.linkedlisting.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.app.linkedlisting.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
