<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".SplashActivity">

    <!-- Username or Email Input -->
    <EditText
        android:id="@+id/usernameOrEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="Username or Email"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/usernameOrEmailEditText"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:text="@string/login" />

    <!-- Signup Button -->
    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="16dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:text="@string/signup" />

</RelativeLayout>
